# taskflow

./: .gitignore  Dockerfile  Jenkinsfile  debug_ansible.py  docker-compose.yml  main.py  pyproject.toml
apps/ansible_app/: __init__.py  admin.py  apps.py  executor.py  filters.py  models.py  serializers.py  tasks.py  urls.py  validators.py  views.py
apps/ansible_app/migrations/: 0001_initial.py
apps/core/: exceptions.py  middleware.py  models.py  pagination.py  permissions.py  responses.py
apps/eveng_app/: admin.py  apps.py  eveng_client.py  filters.py  models.py  serializers.py  urls.py  views.py
apps/eveng_app/migrations/: 0001_initial.py
apps/grafana_app/: admin.py  apps.py  filters.py  grafana_client.py  models.py  serializers.py  urls.py  views.py
apps/grafana_app/migrations/: 0001_initial.py
apps/inventory/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
apps/inventory/migrations/: 0001_initial.py
apps/inventory/utils/: __init__.py  ipam_utils.py  svg_renderer.py
apps/jenkins_app/: admin.py  apps.py  filters.py  jenkins_client.py  models.py  serializers.py  urls.py  views.py
apps/jenkins_app/migrations/: 0001_initial.py
apps/monitoring/: admin.py  apps.py  collectors.py  filters.py  models.py  serializers.py  urls.py  views.py
apps/monitoring/migrations/: 0001_initial.py
apps/terraform_app/: admin.py  apps.py  executor.py  filters.py  models.py  serializers.py  urls.py  views.py
apps/terraform_app/migrations/: 0001_initial.py
apps/users/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_add_date_joined_field.py
config/: celery.py  urls.py
config/settings/: base.py  jazzmin_settings.py
monitor/: docker-compose.yml  prometheus.yml
