[project]
name = "netdevops-backend-django"
version = "0.1.0"
description = "NetDevOps Django Backend"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    # =========================
    # Core Django
    # =========================
    "django>=6.0.3",
    "whitenoise>=6.12.0",
    "python-decouple>=3.8",
    "django-environ>=0.13.0",

    # =========================
    # Django Extensions / Admin
    # =========================
    "django-jazzmin>=3.0.4",
    "django-extensions>=4.1",
    "django-debug-toolbar>=6.2.0",

    # =========================
    # REST API
    # =========================
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "django-filter>=25.2",
    "drf-spectacular>=0.29.0",

    # =========================
    # CORS
    # =========================
    "django-cors-headers>=4.9.0",

    # =========================
    # Database
    # =========================
    "psycopg2-binary>=2.9.11",
    "django-redis>=6.0.0",

    # =========================
    # Celery / Redis
    # =========================
    "celery>=5.6.2",
    "redis>=7.3.0",
    "croniter>=6.2.2",

    # =========================
    # Monitoring / Observability
    # =========================
    "prometheus-client>=0.24.1",
    "django-prometheus>=2.3.1",

    # =========================
    # HTTP / API integrations
    # =========================
    "httpx>=0.28.1",
    "requests>=2.32.5",

    # =========================
    # Network Automation (NetDevOps core)
    # =========================
    "netmiko>=4.6.0",
    "napalm>=5.1.0",
    "paramiko>=4.0.0",

    # =========================
    # Data / utilities
    # =========================
    "pandas>=3.0.1",
    "psutil>=7.2.2",
    "python-dateutil>=2.9.0.post0",
    "pillow>=12.1.1",

    # =========================
    # DevOps integrations
    # =========================
    "python-jenkins>=1.8.3",
    "python-terraform>=0.10.1",

    # =========================
    # Graph / dashboards
    # =========================
    "grafana-api>=1.0.3",

    # =========================
    # Production Server
    # =========================
    "gunicorn>=21.2.0",

    # =========================
    # Dev tools (optional in Docker)
    # =========================
    "ipython>=9.11.0",
    "django-import-export>=4.4.0",
    "drf-yasg>=1.21.15",
]